# haskell-workspace

./: .gitignore  README.md
hws1/: README.md  hws1.cabal
