name:                hws1
version:             0.1.0.0
homepage:            https://github.com/MinganMuon/haskell-workspace/tree/master/hws1
author:              MinganMuon
build-type:          Simple
cabal-version:       >=1.10

executable hws1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
